tests/NormalTests/paczka1/small_fuzzy/38797280.err
Error in line 7: uVNCMAE0lwS S747 59,7
Error in line 10: S868 S868 95,2
